implementado program principal

--- a/sistemaPagamento/sistemaPagamento.csproj
+++ b/sistemaPagamento/sistemaPagamento.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Boleto.cs" />
+    <Compile Include="CartãoCredito.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transacao.cs" />
+    <Compile Include="Transferência.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
